created format to input the limit of loop

--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">How It Works</a>
+                    <a href="index.html">How It Works</a>
                 </li>
                 <li>
-                    <a href="#">About</a>
+                    <a href="about.html">About</a>
                 </li>
                 <li>
                     <a href="#">Objectives</a>
@@ -43,10 +43,27 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-               
-                <p>the looping will occur hear.</p>
-                <p>Make sure to keep all page content within the .</p>
-                <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Instructions</a>
+              <div class="row">
+                <div class="col-md-6">
+                    <p>This Application replaces certain numbers in the array as shown below.</p>
+                    <p>Numbers divisible by 3 are replaced with "ping".</p>
+                    <p>Numbers divisible by 5 are replaced with "ppng" .</p>
+                    <p>Numbers divisible by 15 are replaced with "pingpong" .</p>
+                    <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Instructions</a>
+                </div>
+
+                <div class="col-md-6 col-md-offset-6 " >
+                  <div class ="well form">
+                  <form >
+                      <p id ="play-title">Play Now</p>
+                      <br/>
+                      <input type="text" name="email" placeholder="Enter looping limit" id="text-area"><br/>
+                      <button  id="button" class="btn-floating btn-lg purple-gradient" type="submit">Check</button>  
+                                    
+                  </form> 
+                  </div>
+                </div>
+              </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
