--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="index.html">How It Works</a>
+                    <a href="index.html">How It Works<i class="fa fa-caret-down"></i></a>
                 </li>
                 <li>
                     <a href="about.html">About</a>
@@ -43,10 +43,27 @@
         <!-- Page Content -->
         <div id="page-content-wrapper">
             <div class="container-fluid">
-               
-                <p>the looping will occur hear.</p>
-                <p>Make sure to keep all page content within the .</p>
-                <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Instructions</a>
+              <div class="row">
+                <div class="col-md-5">
+                    <p>This Application replaces certain numbers in the array as shown below.</p>
+                    <p>Numbers divisible by 3 are replaced with "ping".</p>
+                    <p>Numbers divisible by 5 are replaced with "ppng" .</p>
+                    <p>Numbers divisible by 15 are replaced with "pingpong" .</p>
+                    <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">Instructions</a>
+                </div>
+
+                <div class="col-md-4 col-md-offset-5" >
+                  <form>
+                      <p id ="play-title">Play Now</p>
+                      <br/>
+                      <input type="text" name="number" placeholder="Enter looping limit" id="text-area"><br/>
+                      <button  id="button" class=" btn btn-secondary " type="submit">Check</button>                                      
+                  </form> 
+                </div>
+                <div class=" well col-md-3 col-md-offset-9">
+                  <p>Results</p>
+                </div>
+              </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
