convert limit to integer

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                       <button  id="button" class=" btn btn-secondary " type="submit">Check</button>                                      
                   </form> 
                 </div>
-                <div class="col-md-3 col-md-offset-9" >
+                <div class="col-md-3 col-md-offset-9" id="showResult" >
                   <p>Results</p>
-                  <ul id="pingpong"></ul>
+                  
                 </div>
               </div>
             </div>
