--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="col-md-4 col-md-offset-5" >
-                  <form>
+                  <form id="ping">
                       <p id ="play-title">Play Now</p>
                       <br/>
                       <input type="text" name="number" placeholder="Enter looping limit" id="text-area"><br/>
