--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="https://kepha-okari.github.io/" target = "blank">Kepha Okari</a>
                 </li>
                 <li>
-                    <a href="about.html">About</a>
+                    <a href="https://kepha-okari.github.io/" target = "blank">Connect With Me</a>
                 </li>
                 <li>
                     <p>Objectives</p>
@@ -57,7 +57,7 @@
                     <p>Numbers divisible by 3 are replaced with "ping".</p>
                     <p>Numbers divisible by 5 are replaced with "pong" .</p>
                     <p>Numbers divisible by 15 are replaced with "pingpong" .</p>
-                    <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">INFO</a>
+                    <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">See More</a>
                 </div>
 
                 <div class="col-md-4 col-md-offset-5" >
@@ -70,9 +70,7 @@
                 </div>
                 <div class="col-md-3 col-md-offset-9" id="showResult" >
                   <p id ="output">Results</p>
-                  <p id ="output">
-                  </p>
-                  
+                                 
                 </div>
               </div>
             </div>
