replaced the clearform() with a simple .val(); to nonly affect the target field as opposed to the entire form

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                       <button id="button" class=" btn btn-secondary " type="submit">Check</button>                                      
                   </form> 
                 </div>
-                <div class="col-md-3 col-md-offset-9" id="showResult" >
-                  <p id ="output">Results</p>
+                <div well class="col-md-3 col-md-offset-9" id="showResult" >
+                  <p id ="output"><strong>Results</string></p>
                                  
                 </div>
               </div>
