--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p>Numbers divisible by 3 are replaced with "ping".</p>
                     <p>Numbers divisible by 5 are replaced with "pong" .</p>
                     <p>Numbers divisible by 15 are replaced with "pingpong" .</p>
-                    <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle">See More</a>
+                    <a href="#menu-toggle" class="btn btn-secondary" id="menu-toggle"> Click To See More</a>
                 </div>
 
                 <div class="col-md-4 col-md-offset-5" >
